тесты готовы, Docker