@@ -5,10 +5,12 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -24,6 +26,7 @@ import by.toukachmikhail.taskmanagementsystem.services.TaskService;
 import by.toukachmikhail.taskmanagementsystem.services.impl.UserDetailsServiceImpl;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -35,132 +38,6 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-
-//@ExtendWith(MockitoExtension.class)
-//public class TaskControllerTest {
-//
-//  @Mock
-//  private TaskService taskService;
-//
-//  @Mock
-//  private UserDetailsServiceImpl userDetailsService;
-//
-//  @InjectMocks
-//  private TaskControllerImpl taskController;
-//
-//  private MockMvc mockMvc;
-//  private ObjectMapper objectMapper;
-//  private UserDto userDto;
-//  private CommentDto commentDto;
-//
-//  @BeforeEach
-//  void setUp() {
-//    mockMvc = MockMvcBuilders.standaloneSetup(taskController).build();
-//    objectMapper = new ObjectMapper();
-//    userDto = new UserDto("Mikl", "mikl@mail.ru", UserRole.USER);
-//    commentDto = new CommentDto("Text");
-//  }
-//
-//  @Test
-//  void getAllTasksShouldReturnAllTasks() throws Exception {
-//
-//    TaskDto taskDto = new TaskDto(
-//        "Header", "Description", TaskStatus.FINISHED, TaskPriority.HIGH, userDto, null, null
-//    );
-//    when(taskService.createTask(taskDto)).thenReturn(taskDto);
-//
-//    mockMvc.perform(post("/api/v1/tasks")
-//            .contentType(MediaType.APPLICATION_JSON)
-//            .content(objectMapper.writeValueAsString(taskDto)))
-//        .andExpect(status().isCreated())
-//        .andExpect(jsonPath("$.header").value("Header"))
-//        .andExpect(jsonPath("$.description").value("Description"));
-//
-//    verify(taskService).createTask(taskDto);
-//  }
-//
-//  @Test
-//  void getTaskByIdShouldReturnTask() throws Exception {
-//
-//    TaskDto taskDto = new TaskDto(
-//        "Header", "Description", TaskStatus.FINISHED, TaskPriority.HIGH, null, null, null
-//    );
-//    when(taskService.getTaskById(1L)).thenReturn(taskDto);
-//
-//    mockMvc.perform(get("/api/v1/tasks/1")
-//            .contentType(MediaType.APPLICATION_JSON))
-//        .andExpect(status().isOk())
-//        .andExpect(jsonPath("$.header").value("Header"))
-//        .andExpect(jsonPath("$.description").value("Description"));
-//
-//    verify(taskService).getTaskById(1L);
-//  }
-//
-//  @Test
-//  void createTaskShouldReturnCreatedTask() throws Exception {
-//
-//    TaskDto taskDto = new TaskDto(
-//        "Header", "Description", TaskStatus.FINISHED, TaskPriority.HIGH, null, null, null
-//    );
-//    when(taskService.createTask(taskDto)).thenReturn(taskDto);
-//
-//    mockMvc.perform(post("/api/v1/tasks")
-//            .contentType(MediaType.APPLICATION_JSON)
-//            .content(objectMapper.writeValueAsString(taskDto)))
-//        .andExpect(status().isCreated())
-//        .andExpect(jsonPath("$.header").value("Header"))
-//        .andExpect(jsonPath("$.description").value("Description"));
-//
-//    verify(taskService).createTask(taskDto);
-//  }
-//
-//  @Test
-//  void updateTaskShouldReturnUpdatedTask() throws Exception {
-//
-//    User currentUser = new User();
-//    currentUser.setUsername("Kirill");
-//    currentUser.setEmail("kirill@mail.ru");
-//
-//    currentUser.setRole(UserRole.USER);
-//    UserDto currentUserDto = new UserDto("Kirill","kirill@mail.ru",UserRole.USER);
-//
-//    when(userDetailsService.getCurrentUser()).thenReturn(currentUser);
-//    TaskDto taskDto = new TaskDto(
-//        "Updated Header", "Updated Description", TaskStatus.FINISHED, TaskPriority.HIGH,
-//        currentUserDto, null, null
-//    );
-//
-//    when(taskService.updateTask(
-//        eq(1L),
-//        eq(taskDto),
-//        eq(currentUser)
-//    )).thenReturn(taskDto);
-//
-//    mockMvc.perform(put("/api/v1/tasks/1")
-//            .contentType(MediaType.APPLICATION_JSON)
-//            .content(objectMapper.writeValueAsString(taskDto)))
-//        .andExpect(status().isOk())
-//        .andExpect(jsonPath("$.header").value("Updated Header"))
-//        .andExpect(jsonPath("$.description").value("Updated Description"));
-//
-//    verify(taskService).updateTask(
-//        eq(1L),
-//        eq(taskDto),
-//        eq(currentUser)
-//    );
-//  }
-//
-//  @Test
-//  void deleteTaskShouldReturnOk() throws Exception {
-//
-//    doNothing().when(taskService).deleteTask(1L);
-//
-//    mockMvc.perform(delete("/api/v1/tasks/1")
-//            .contentType(MediaType.APPLICATION_JSON))
-//        .andExpect(status().isOk());
-//
-//    verify(taskService).deleteTask(1L);
-//  }
 
 @ExtendWith(MockitoExtension.class)
 public class TaskControllerTest {
@@ -188,21 +65,26 @@ public class TaskControllerTest {
   }
 
   @Test
-  void getAllTasksShouldReturnAllTasks() throws Exception {
-    // Arrange
-    UserDto assigneeDto = new UserDto("Mikl", "mikl@mail.ru", UserRole.USER);
-    CommentDto commentDto = new CommentDto("Комментарий 1");
-
-    TaskDto taskDto = new TaskDto(
-        "Header", "Description", TaskStatus.FINISHED, TaskPriority.HIGH,
-        assigneeDto, null, Collections.singletonList(commentDto) // Добавляем комментарий
-    );
+  void getAllTasks_ShouldReturnPageOfTasks() throws Exception {
+    // Подготовка данных
+    TaskDto taskDto = TaskDto.builder()
+        .header("Header")
+        .description("Description")
+        .status(TaskStatus.FINISHED)
+        .priority(TaskPriority.HIGH)
+        .assignee(new UserDto("Mikl", "mikl@mail.ru", UserRole.USER))
+        .comments(List.of(commentDto))
+        .build();
 
     Page<TaskDto> taskPage = new PageImpl<>(Collections.singletonList(taskDto));
 
-    when(taskService.getAllTasks(0, 10, "id", "asc")).thenReturn(taskPage);
+    System.out.println("Mocking taskService to return: " + taskPage);
 
-    // Act & Assert
+    when(taskService.getAllTasks(any(Integer.class), any(Integer.class), any(String.class), any(String.class)))
+        .thenReturn(taskPage);
+
+    System.out.println("Performing GET request to /api/v1/tasks...");
+
     mockMvc.perform(get("/api/v1/tasks")
             .param("page", "0")
             .param("size", "10")
@@ -210,16 +92,21 @@ public class TaskControllerTest {
             .param("direction", "asc")
             .contentType(MediaType.APPLICATION_JSON))
         .andExpect(status().isOk())
+        .andExpect(content().contentType(MediaType.APPLICATION_JSON))
         .andExpect(jsonPath("$.content[0].header").value("Header"))
         .andExpect(jsonPath("$.content[0].description").value("Description"))
         .andExpect(jsonPath("$.content[0].status").value("FINISHED"))
         .andExpect(jsonPath("$.content[0].priority").value("HIGH"))
         .andExpect(jsonPath("$.content[0].assignee.username").value("Mikl"))
-        .andExpect(jsonPath("$.content[0].assignee.email").value("mikl@mail.ru"))
-        .andExpect(jsonPath("$.content[0].assignee.role").value("USER"))
-        .andExpect(jsonPath("$.content[0].comments[0].text").value("Комментарий 1")); // Проверяем комментарий
+        .andDo(result -> {
+          // Логирование результата выполнения запроса
+          System.out.println("Request result: " + result.getResponse().getContentAsString());
+        });
 
-    // Verify
+    // Логирование после выполнения запроса
+    System.out.println("GET request to /api/v1/tasks completed.");
+
+    // Проверка вызова сервиса
     verify(taskService).getAllTasks(0, 10, "id", "asc");
   }
 
@@ -227,7 +114,7 @@ public class TaskControllerTest {
   void getTaskByIdShouldReturnTask() throws Exception {
 
     TaskDto taskDto = new TaskDto(
-        "Header", "Description", TaskStatus.FINISHED, TaskPriority.HIGH, userDto, null, null
+        "Header", "Description", TaskStatus.FINISHED, TaskPriority.HIGH, userDto, null
     );
     when(taskService.getTaskById(1L)).thenReturn(taskDto);
 
@@ -249,7 +136,7 @@ public class TaskControllerTest {
   void createTaskShouldReturnCreatedTask() throws Exception {
 
     TaskDto taskDto = new TaskDto(
-        "Header", "Description", TaskStatus.FINISHED, TaskPriority.HIGH, userDto, commentDto, null
+        "Header", "Description", TaskStatus.FINISHED, TaskPriority.HIGH, userDto, List.of(commentDto)
     );
     when(taskService.createTask(taskDto)).thenReturn(taskDto);
 
@@ -263,8 +150,7 @@ public class TaskControllerTest {
         .andExpect(jsonPath("$.priority").value("HIGH"))
         .andExpect(jsonPath("$.assignee.username").value("Mikl"))
         .andExpect(jsonPath("$.assignee.email").value("mikl@mail.ru"))
-        .andExpect(jsonPath("$.assignee.role").value("USER"))
-        .andExpect(jsonPath("$.comment.text").value("Text"));
+        .andExpect(jsonPath("$.assignee.role").value("USER"));
 
 
     verify(taskService).createTask(taskDto);
@@ -284,8 +170,7 @@ public class TaskControllerTest {
 
     TaskDto taskDto = new TaskDto(
         "Updated Header", "Updated Description", TaskStatus.FINISHED, TaskPriority.HIGH,
-        currentUserDto, commentDto, null
-    );
+        currentUserDto,List.of(commentDto));
 
     when(taskService.updateTask(
         eq(1L),
@@ -303,8 +188,7 @@ public class TaskControllerTest {
         .andExpect(jsonPath("$.priority").value("HIGH"))
         .andExpect(jsonPath("$.assignee.username").value("Kirill"))
         .andExpect(jsonPath("$.assignee.email").value("kirill@mail.ru"))
-        .andExpect(jsonPath("$.assignee.role").value("USER"))
-        .andExpect(jsonPath("$.comment.text").value("Text"));
+        .andExpect(jsonPath("$.assignee.role").value("USER"));
 
     verify(taskService).updateTask(
         eq(1L),
